简化代码